Fixed sonar warn